--- a/index.html
+++ b/index.html
@@ -66,33 +66,41 @@
                 <h2 class="visually-hidden">Особливості</h2>
                 <ul class="feature-list list">
                     <li class="item">
-                        <svg class="icon" width="70" height="70">
-                            <use href="./images/icons.svg#icon-antenna" />
-                        </svg>
+                        <div class="icon-wrapper">
+                            <svg class="icon" width="70" height="70">
+                                <use href="./images/icons.svg#icon-antenna" />
+                            </svg>
+                        </div>
+
                         <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
                     <li class="item">
-                        <svg class="icon" width="70" height="70">
-                            <use href="./images/icons.svg#icon-clock" />
-                        </svg>
+                        <div class="icon-wrapper">
+                            <svg class="icon" width="70" height="70">
+                                <use href="./images/icons.svg#icon-clock" />
+                            </svg>
+                        </div>
                         <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
 
                     <li class="item">
-                        <svg class="icon" width="70" height="70">
-                            <use href="./images/icons.svg#icon-diagram" />
-                        </svg>
+                        <div class="icon-wrapper">
+                            <svg class="icon" width="70" height="70">
+                                <use href="./images/icons.svg#icon-diagram" />
+                            </svg>
+                        </div>
                         <h3 class="title">ПЛАНУВАННЯ</h3>
                         <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-
                     <li class="item">
-                        <svg class="icon" width="70" height="70">
-                            <use href="./images/icons.svg#icon-astronaut" />
-                        </svg>
+                        <div class="icon-wrapper">
+                            <svg class="icon" width="70" height="70">
+                                <use href="./images/icons.svg#icon-astronaut" />
+                            </svg>
+                        </div>
                         <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
